# icenet-sipn-south

./: .gitignore  Makefile  README.md  data  environment.yml  generate_diagnostics.sh  icenet-pipeline  pyproject.toml  xarray_test.ipynb
docs/source/: conf.py  icenet_sipn_south.metrics.rst  icenet_sipn_south.process.rst  icenet_sipn_south.rst  index.rst  modules.rst
icenet_sipn_south/: __init__.py  cli.py
icenet_sipn_south/metrics/: sea_ice_area.py  sipn_outputs.py
icenet_sipn_south/process/: icenet.py
outputs/: gitmv_rename_output_files_francois_response.sh
outputs/2017-2018/txt/: BAS_001_20171201-20180228_regional-area.txt  BAS_001_20171201-20180228_totalarea.txt  BAS_002_20171201-20180228_regional-area.txt  BAS_002_20171201-20180228_total-area.txt  BAS_003_20171201-20180228_regional-area.txt  BAS_003_20171201-20180228_totalarea.txt  BAS_004_20171201-20180228_regional-area.txt  BAS_004_20171201-20180228_total-area.txt  BAS_005_20171201-20180228_regional-area.txt  BAS_005_20171201-20180228_total-area.txt  (+10 more)
outputs/txt/: bas_000_20231201-20240228_total-area.txt  bas_001_regional-area.txt  bas_001_total-area.txt  bas_002_regional-area.txt  bas_002_total-area.txt  bas_003_20231201-20240228_total-area.txt  bas_003_regional-area.txt  bas_003_total-area.txt  bas_004_regional-area.txt  bas_004_total-area.txt  bas_005_regional-area.txt  bas_005_total-area.txt  bas_006_regional-area.txt  bas_006_total-area.txt  bas_007_20231201-20240228_total-area.txt  bas_007_regional-area.txt  bas_007_total-area.txt  bas_008_regional-area.txt  bas_008_total-area.txt  bas_009_20231201-20240228_total-area.txt  bas_009_regional-area.txt  bas_009_total-area.txt  bas_010_regional-area.txt  bas_010_total-area.txt
(+120 files in other folders)
